--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
 
 # Editor directories and files
-.idea
-.idea/*.xml
-*.iws
-*.iml
-*.ipr
+.idea/
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
